k8s/01-namespace-configmap.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sinerfin
  labels:
    app.kubernetes.io/part-of: sinerfin
